@@ -1,3 +1,8 @@
+- Experimental (might still be removed):
+	- Always show all top level menus
+	- new function rk.results () for use in plugins
+
+- fix several minor issues as identified by the "krazy" source code checker
 - allow varslots to request objects of specified dimensionality and length
 - fixed: integer spinboxes with starting values greater than 1 would get unreasonable change steps
 - fix compilation with some versions of KDE / GCC
